# RomTholos

./: .gitignore  DESIGN.md  FILE_SAFETY.md  LICENSE  README.md  SPEC.md  dedup.py  launcher-mister.py  pyproject.toml  updateHashesTopLevel.py
conf/: launcher-mister.json
doc/rscf_samples/: Sonic CD (USA).7z.rscf  Viking Child (USA, Europe).7z.rscf
src/romtholos/: __init__.py  cli.py
src/romtholos/collect/: __init__.py  backup.py  cli.py  compress.py  config.py  db.py  execute.py  extract.py  lock.py  match.py  purge.py  scan.py  verify.py
src/romtholos/render/: __init__.py
src/romtholos/select/: __init__.py  cli.py  config.py  run.py
src/romtholos/web/: __init__.py
tests/collect/: conftest.py  test_backup.py  test_compress.py  test_dimg.py  test_extract.py  test_file_safety.py  test_pipeline.py  test_profile_execute.py  test_safety_cold_start.py  test_safety_collection_verify.py  test_safety_concurrent.py  test_safety_copy_as_is.py  test_safety_corruption_postmortem.py  test_safety_dat_updates.py  test_safety_disposal.py  test_safety_orphan_granularity.py  test_safety_orphan_purge.py  test_safety_orphan_quarantine.py  test_safety_partial_fallback.py  test_safety_profile_transition.py  test_safety_relocation.py  test_safety_selection.py  test_safety_shared_hash.py  test_safety_source_modes.py  test_scan.py
tests/fixtures/: README.md  test_gc.iso  test_gc.rvz  test_ps1.aaru  test_ps1.cue  test_ps1_multitrack.aaru  test_ps1_multitrack.cue  test_ps1_zstd.aaru  test_ps2dvd.aaru  test_ps2dvd.iso
utils/: b3sum.py  fs.py  par2.py  rscf.py
