[project]
name = "romtholos"
version = "0.1.0"
description = "ROM collection manager — collect, render, browse"
authors = [
    { name = "Kevin Bortis", email = "kevin@bortis.ch" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "defusedxml>=0.7.1",
    "rscf>=0.1.0",
    "strictyaml>=1.7.3",
    "typer>=0.15",
]

[project.scripts]
romtholos = "romtholos.cli:app"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0",
]
